syntax = "proto3";

option go_package = "./internal/pb";

service Auth {
  rpc Register (RegisterRequest) returns (AuthResponse) {}
  rpc Login (LoginRequest) returns (AuthResponse) {}
  rpc Validate (ValidateRequest) returns (ValidateResponse) {}
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message AuthResponse {
  string access_token = 1;
  string error = 2;
  int32 status_code = 3;
}

message ValidateRequest {
  string access_token = 1;
}

message ValidateResponse {
  int32 status_code = 1;
  string email = 2;
}